fix chapter 7 and 8 formatting issues

--- a/kapitel/08_risiken.tex
+++ b/kapitel/08_risiken.tex
@@ -3,8 +3,9 @@
 \section{Chancen}
 
 Die drei größten Chancen für FreshGuard liegen im wachsenden Umweltbewusstsein, da der gesellschaftliche Trend zu weniger Lebensmittelverschwendung und nachhaltigem Konsum die Nachfrage nach Lösungen wie FreshGuard stärkt. Außerdem nimmt die Anzahl an Mehrpersonenhaushalten zu, denn Wohngemeinschaften, Mehrgenerationenhäuser und größere Familien benötigen kollaborative Lösungen zur Haushaltsverwaltung. Schließlich profitiert FreshGuard von der fortschreitenden Digitalisierung im Alltag, da immer mehr Menschen digitale Tools zur Organisation ihres Alltags nutzen und die Akzeptanz für Web-Apps kontinuierlich steigt.
-
-\noindent Auf dem Markt bieten sich weitere Chancen durch den wachsenden Markt für Nachhaltigkeits-Apps, die steigende Sensibilität für Lebensmittelverschwendung im Rahmen von EU-Initiativen sowie das Fehlen eines dominanten Marktführers im DACH-Raum. Technologisch ermöglichen Progressive Web Apps App-ähnliche Erlebnisse, Cloud-Technologien erlauben kosteneffiziente Skalierung und das Open-Source-Ökosystem reduziert die Entwicklungskosten. Strategisch ergeben sich Möglichkeiten für Kooperationen mit Nachhaltigkeits-Initiativen, eine B2B-Erweiterung auf Kantinen und kleine Gastro-Betriebe sowie eine internationale Expansion nach erfolgreicher Etablierung im DACH-Raum.
+Auf dem Markt bieten sich weitere Chancen durch den wachsenden Markt für Nachhaltigkeits-Apps, die steigende Sensibilität für Lebensmittelverschwendung im Rahmen von EU-Initiativen sowie das Fehlen eines dominanten Marktführers im DACH-Raum. 
+Technologisch ermöglichen Progressive Web Apps App-ähnliche Erlebnisse, Cloud-Technologien erlauben kosteneffiziente Skalierung und das Open-Source-Ökosystem reduziert die Entwicklungskosten. 
+Strategisch ergeben sich Möglichkeiten für Kooperationen mit Nachhaltigkeits-Initiativen, eine B2B-Erweiterung auf Kantinen und kleine Gastro-Betriebe sowie eine internationale Expansion nach erfolgreicher Etablierung im DACH-Raum.
 
 \section{Risiken und Absicherung}
 
