--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,7 @@
 \usepackage{enumitem}
 \usepackage{float}
 \usepackage{xcolor}
+\usepackage{microtype}
 \usepackage{helvet}
 \renewcommand{\familydefault}{\sfdefault}
 
