--- a/kapitel/01_zusammenfassung.tex
+++ b/kapitel/01_zusammenfassung.tex
@@ -14,7 +14,7 @@ Die Zielgruppe umfasst private Haushalte, Wohngemeinschaften und Familien, die i
 
 Der Gesamtkapitalbedarf für 24 Monate beträgt circa 375.000 Euro und setzt sich zusammen aus Bürokosten inklusive Miete, Internet und Strom (24.000 Euro), Ausrüstung für Schreibtische, PCs, Monitore und Peripherie (4.300 Euro), Arbeitsstunden für drei Personen (345.600 Euro) sowie Server-Hosting (900 Euro).
 
-\begin{tabular}{lr}
+\noindent \begin{tabular}{lr}
     \toprule
     \textbf{Jahr} & \textbf{Erwarteter Umsatz} \\
     \midrule
