--- a/kapitel/02_gruenderperson.tex
+++ b/kapitel/02_gruenderperson.tex
@@ -14,7 +14,7 @@ Die besonderen Stärken des Gründerteams liegen in der technischen Kompetenz im
 
 Das Team ist sich seiner Defizite bewusst und hat entsprechende Gegenmaßnahmen geplant. Die begrenzte Marketing-Erfahrung soll durch Online-Tutorials, Fachliteratur und gegebenenfalls externe Beratung ausgeglichen werden. Dem geringen Eigenkapital begegnet das Team mit einem Bootstrapping-Ansatz und minimalem Budget, das sich zunächst auf Hosting-Kosten beschränkt. Für die fehlende Erfahrung in der Unternehmensführung werden IHK-Beratung, Gründerseminare und Mentoring in Anspruch genommen.
 
-\begin{tabular}{p{6cm}p{7cm}}
+\noindent \begin{tabular}{p{8cm}p{7cm}}
     \toprule
     \textbf{Defizit} & \textbf{Ausgleichsmaßnahme} \\
     \midrule
