--- a/kapitel/04_markt_wettbewerb.tex
+++ b/kapitel/04_markt_wettbewerb.tex
@@ -6,7 +6,7 @@ Die Zielkunden von FreshGuard sind private Haushalte und Wohngemeinschaften, die
 Der Fokus liegt primär auf dem deutschsprachigen Raum (DACH-Region), da der Serverstandort in Deutschland liegt und die Benutzeroberfläche deutschsprachig ist. Die Hauptzielgruppe sind technikaffine und umweltbewusste Personen im Alter von 25 bis 55 Jahren, die in Haushalten mit zwei bis sechs Personen leben -- also Paare, Familien und Wohngemeinschaften. 
 Der Fokus liegt auf Nachhaltigkeit und bewusstem Konsum.
 
-\begin{tabular}{ll}
+\noindent \begin{tabular}{ll}
     \toprule
     \textbf{Kriterium} & \textbf{Zielgruppe} \\
     \midrule
@@ -24,7 +24,7 @@ Die typischen Probleme der Zielkunden sind ein fehlender Überblick über Lebens
 FreshGuard adressiert diese Probleme durch eine speziell für Haushalte mit mehreren Personen entwickelte Lösung, die einfach zu bedienen ist und keine Installation erfordert. 
 Die DSGVO-Konformität mit deutschem Serverstandort schafft Vertrauen, während die faire Preisgestaltung mit kostenlosem Einstieg die Hürden niedrig hält.
 
-\begin{tabular}{lr}
+\noindent \begin{tabular}{lr}
     \toprule
     \textbf{Jahr} & \textbf{Erwarteter Umsatz} \\
     \midrule
