--- a/kapitel/05_marketing.tex
+++ b/kapitel/05_marketing.tex
@@ -9,7 +9,7 @@ Der Service umfasst einen Online-Hilfe- und FAQ-Bereich, E-Mail-Support für all
 
 FreshGuard verfolgt ein Freemium-Modell mit kostenlosem Basis-Plan und Premium-Upgrades. Der Free-Plan ermöglicht Einzelnutzern das Testen der Anwendung, während bezahlte Pläne erweiterte Funktionen und mehr Haushalte sowie Mitglieder bieten.
 
-\begin{tabular}{llr}
+\noindent \begin{tabular}{llr}
     \toprule
     \textbf{Plan} & \textbf{Leistungen} & \textbf{Preis} \\
     \midrule
@@ -29,7 +29,7 @@ FreshGuard verfolgt ein Freemium-Modell mit kostenlosem Basis-Plan und Premium-U
 
 Die Vertriebskosten sind minimal, da der Vertrieb vollständig als Self-Service erfolgt. Nutzer registrieren sich direkt über die Webanwendung und Premium-Upgrades erfolgen innerhalb der Anwendung. Es gibt keine Zwischenhändler oder Vertriebspartner. Die jährlichen Kosten belaufen sich auf circa 60 Euro für Serverkosten und 12 Euro für die Domain.
 
-\begin{tabular}{lrrr}
+\noindent\begin{tabular}{lrrr}
     \toprule
     \textbf{Jahr} & \textbf{Registrierte Nutzer} & \textbf{Premium-Anteil} & \textbf{Premium-Nutzer} \\
     \midrule
@@ -46,7 +46,7 @@ Die Vertriebskosten sind minimal, da der Vertrieb vollständig als Self-Service 
 
 Kunden erfahren von FreshGuard über Social Media (Instagram, Facebook, TikTok), SEO-Optimierung für Suchmaschinen, Mundpropaganda durch zufriedene Nutzer sowie Content-Marketing über Blog und Ratgeber. Ab dem Launch wird die Social-Media-Präsenz aufgebaut, in den Monaten eins bis drei folgt Content-Marketing mit Blog-Artikeln zu Lebensmittelverschwendung. In den Monaten drei bis sechs ist gezielte Social-Media-Werbung geplant und ab Monat sechs sollen Influencer-Kooperationen im Bereich Nachhaltigkeit hinzukommen.
 
-\begin{tabular}{lr}
+\noindent \begin{tabular}{lr}
     \toprule
     \textbf{Jahr} & \textbf{Werbebudget} \\
     \midrule
