--- a/kapitel/06_organisation.tex
+++ b/kapitel/06_organisation.tex
@@ -4,7 +4,7 @@
 
 FreshGuard wird von drei Gründern mit komplementären Fähigkeiten gegründet, wobei die Gründung am 24. Dezember 2025 geplant ist. Phillipp Atzler fungiert als Geschäftsführer, und alle drei Gesellschafter -- Maike Abel, Phillipp Atzler und Elisa Dörnbrak -- haben eine Ausbildung zum Fachinformatiker Anwendungsentwicklung absolviert. Der Unternehmenssitz ist in Deutschland und der Geschäftszweck umfasst die Entwicklung und den Betrieb von Webanwendungen zur Haushaltsverwaltung.
 
-\begin{tabular}{ll}
+\noindent \begin{tabular}{ll}
     \toprule
     \textbf{Merkmal} & \textbf{Details} \\
     \midrule
@@ -23,7 +23,7 @@ Die Aufgaben sind klar verteilt: Phillipp Atzler übernimmt als Geschäftsführe
 
 Die folgende Abbildung zeigt die Organisationsstruktur des Unternehmens:
 
-\begin{figure}[H]
+\noindent \begin{figure}[H]
     \centering
     \includegraphics[width=0.9\textwidth]{img/Organigramm.png}
     \caption{Organisationsstruktur der FreshGuard -- Atzler, Abel \& Dörnbrak GbR}
