--- a/kapitel/08_risiken.tex
+++ b/kapitel/08_risiken.tex
@@ -15,7 +15,7 @@ Schließlich könnten technische Probleme wie Sicherheitsvorfälle oder Serverau
 Intern bestehen Risiken durch den möglichen Ausfall eines Gründers durch Krankheit oder Ausstieg, die mangelnde Marketing-Erfahrung im Team sowie die Überlastung durch die Mehrfachbelastung aus Entwicklung und Betrieb. 
 Externe Risiken umfassen verschärfte Datenschutzvorschriften, eine wirtschaftliche Rezession, die die Ausgabebereitschaft reduziert, sowie technologischen Wandel durch neue Plattformen oder Standards.
 
-\begin{tabular}{p{5cm}p{8cm}}
+\noindent \begin{tabular}{p{6cm}p{9cm}}
     \toprule
     \textbf{Risiko} & \textbf{Gegenmaßnahme} \\
     \midrule
